<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_app_text">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="share_intent_title">Выберите приложение</string>
    <string name="support_email">a.mayorshina@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="clear_button">Очистить</string>
    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_int">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_hint_text">Введите название трека или исполнителя</string>
    <string name="player">Плеер</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали ни одного плейлиста</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название *</string>
    <string name="playlist_description">Описание</string>
    <string name="exit_creation_title">Создать</string>
    <string name="create_playlist">Создать</string>
    <string name="exit_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="exit_creation_qw">Завершить создание плейлиста?</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="menu_playlist_name">Название плейлиста</string>
    <string name="menu_playlist_descr">Описание плейлиста</string>
    <string name="tracksQuantity">00 треков</string>
    <string name="empty_playlist">В этом плейлисте пока нет треков</string>
    <string name="menuPlaylistName">Лучшие треки 2024</string>
    <string name="playlist_share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_description">Описание отсутствует</string>
    <string name="duration_format">%d минут</string>
    <string name="deleteTrack">Удалить трек?</string>
    <string name="confirmDeleteTrack">Хотите удалить трек?</string>
    <string name="deletePlaylist">Удалить плейлист?</string>
    <string name="confirmDeletePlaylistWithName">Хотите удалить плейлист "%1$s"?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="noShareMessage">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="error_loading_playlist">Ошибка загрузки плейлиста</string>
    <string name="error_loading_track">Ошибка загрузки трека</string>
    <string name="empty_playlist_duration">0 минут</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="save">Сохранить</string>
    <string name="playlist_created">Плейлист создан</string>
    <string name="playlist_updated">Плейлист обновлен</string>


</resources>