<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_vertical"
        android:paddingStart="@dimen/padding_start"
        android:text="@string/app_name"
        android:textAppearance="@style/ButtonFontStyle"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <Button
        android:id="@+id/button1"
        style="@style/ButtonStyle"
        android:text="@string/search"
        android:textAppearance="@style/ButtonFontStyle"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/dark_gray" />

    <Button
        android:id="@+id/button2"
        style="@style/ButtonStyle"
        android:text="@string/library"
        android:textAppearance="@style/ButtonFontStyle"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconTint="@color/dark_gray" />

    <Button
        android:id="@+id/button3"
        style="@style/ButtonStyle"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        android:textAppearance="@style/ButtonFontStyle"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/dark_gray" />
</LinearLayout>