<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settingsBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/button_back"
            style="@style/ButtonStyleIconOnly"
            app:icon="@drawable/back"
            app:iconGravity="textStart"
            app:iconTint="@color/settingsIconBack"
            android:backgroundTint="@color/settingsBackground"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/settingsText"
            android:textSize="@dimen/text_size_large"
            android:paddingVertical="@dimen/padding_vertical"
            android:paddingStart="12dp"
            android:fontFamily="@font/ys_display_medium"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        style="@style/SettingsSwitch"
        android:text="@string/dark_theme"
        android:textColor="@color/settingsText"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView2"
            style="@style/SettingsTextView"
            android:text="@string/share_app"
            android:textColor="@color/settingsText"
            android:onClick="shareApp"
            tools:ignore="RtlSymmetry" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/icon_margin_end"
                app:srcCompat="@drawable/share"
                app:tint="@color/settingsIcon" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView3"
            style="@style/SettingsTextView"
            android:text="@string/support"
            android:textColor="@color/settingsText"
            android:onClick="writeSupport"
            tools:ignore="RtlSymmetry" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/icon_margin_end"
                app:srcCompat="@drawable/support"
                app:tint="@color/settingsIcon" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView4"
            style="@style/SettingsTextView"
            android:text="@string/user_agreement"
            android:textColor="@color/settingsText"
            android:onClick="openUserAgreement"
            tools:ignore="RtlSymmetry" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/icon_margin_end"
                app:srcCompat="@drawable/arrow"
                app:tint="@color/settingsIcon" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>