<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settingsBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back"
            style="@style/ButtonStyleIconOnly"
            android:backgroundTint="@color/settingsBackground"
            app:icon="@drawable/back"
            app:iconGravity="textStart"
            app:iconTint="@color/settingsIconBack" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/padding_vertical"
            android:paddingStart="12dp"
            android:text="@string/search"
            android:textColor="@color/settingsText"
            android:textSize="@dimen/text_size_large"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:backgroundTint="@color/searchBarBackground"
            android:drawableStart="@drawable/search_icon_bar"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="15"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="8.5dp"
            android:paddingEnd="48dp"
            android:paddingBottom="8.5dp"
            android:singleLine="true"
            android:textColor="@color/searchBarTextColor"
            android:textColorHint="@color/searchBarTextColorHint" />

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_button"
            android:paddingEnd="@dimen/clear_button_padding_end"
            android:src="@drawable/clear_button"
            android:visibility="gone"
            app:tint="@color/IconClearColor" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:visibility="gone"
        tools:listitem="@layout/item_track" />

    <LinearLayout
        android:id="@+id/error_placeholder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp" />

        <TextView
            android:id="@+id/placeholderMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/placeholderMessageColor"
            android:textSize="@dimen/errorMessage" />

        <LinearLayout
            android:id="@+id/update_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:background="@drawable/search_button_update"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:visibility="gone">

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textSize="@dimen/update_button_text_size"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

