<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E8EB"
    tools:context=".ui.media_library.playlist_menu.PlaylistMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/playerCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/playlist_cover_placeholder" />

        <ImageButton
            android:id="@+id/buttonBack"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:tint="@color/settingsText"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />


        <TextView
            android:id="@+id/playlistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/menu_playlist_name"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playerCover" />

        <TextView
            android:id="@+id/playlistDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/menu_playlist_descr"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playlistName" />

        <TextView
            android:id="@+id/durationAllTracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="100 минут"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playlistDescription" />

        <ImageView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/point"
            app:layout_constraintBottom_toBottomOf="@+id/durationAllTracks"
            app:layout_constraintStart_toEndOf="@+id/durationAllTracks"
            app:layout_constraintTop_toTopOf="@+id/durationAllTracks"
            app:tint="@color/black"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/numberOfTracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/tracksQuantity"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/point"
            app:layout_constraintTop_toBottomOf="@id/playlistDescription" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/share"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/durationAllTracks"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="17dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/points_menu"
            app:layout_constraintBottom_toBottomOf="@+id/share"
            app:layout_constraintStart_toEndOf="@id/share"
            app:layout_constraintTop_toTopOf="@id/share"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/tracksBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_rectangle"
        android:backgroundTint="@color/settingsBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:behavior_peekHeight="266dp"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_rec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrackList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            app:behavior_hideable="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/noTracksMassage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/empty_playlist"
            android:textColor="@color/settingsText"
            android:textFontWeight="500"
            android:textSize="19sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editingBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:background="@color/settingsBackground"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_rec" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/album"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:src="@drawable/placeholder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily=">@font/ys_display_regular"
                    android:maxLines="1"
                    android:textColor="@color/settingsText"
                    android:textFontWeight="400"
                    android:textSize="16sp"
                    tools:text="@string/menuPlaylistName" />

                <TextView
                    android:id="@+id/quantityTracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="@color/gray_white"
                    android:textFontWeight="400"
                    android:textSize="11sp"
                    tools:text="@string/tracksQuantity" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_pl"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ys_display_regular"
                android:paddingStart="16dp"
                android:text="@string/playlist_share"
                android:textColor="@color/settingsText"
                android:textFontWeight="400"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_playlist"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ys_display_regular"
                android:paddingStart="16dp"
                android:text="@string/edit_info"
                android:textColor="@color/settingsText"
                android:textFontWeight="400"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_pl"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ys_display_regular"
                android:paddingStart="16dp"
                android:text="@string/delete_playlist"
                android:textColor="@color/settingsText"
                android:textFontWeight="400"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>